apply z-index of 0 to select elements to ensure they're always below selectpicker button

--- a/less/bootstrap-select.less
+++ b/less/bootstrap-select.less
@@ -58,6 +58,7 @@ select.selectpicker {
     padding: 0 !important;
     opacity: 0 !important;
     border: none;
+    z-index: 0 !important;
 
     &.mobile-device {
       top: 0;
