--- a/sass/bootstrap-select.scss
+++ b/sass/bootstrap-select.scss
@@ -76,6 +76,7 @@ select.selectpicker {
     padding: 0 !important;
     opacity: 0 !important;
     border: none;
+    z-index: 0 !important;
 
     &.mobile-device {
       top: 0;
